--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <title></title>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html"/>
-  <link rel="import" href="lifecycle-element.html"/>
+  <link rel="import" href="my-card.html"/>
 </head>
 <body>
-  <lifecycle-element></lifecycle-element>
-
+  <my-card></my-card>
 </body>
 </html>
