--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
   <title></title>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html"/>
-  <link rel="import" href="my-button.html"/>
+  <link rel="import" href="prop-element.html"/>
 </head>
 <body>
-  <button id="btn1" is="my-button">Hello World</button>
-  <button id="btn2">Hello World</button>
+  <prop-element position="foo" name="Andrey"></prop-element>
 </body>
-<script>
-  btn1.addEventListener('click', function(){
-    console.log('btn clicked')
-  })
-</script>
 </html>
