--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <title></title>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html"/>
-  <link rel="import" href="hello-world.html"/>
+  <link rel="import" href="listener-element.html"/>
 </head>
 <body>
-  <hello-world id="hello" name="Joe"></hello-world>
+  <listener-element></listener-element>
 
 </body>
 </html>
