--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <title></title>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="bower_components/polymer/polymer.html"/>
-  <link rel="import" href="hello-world.html"/>
+  <link rel="import" href="my-range.html"/>
 </head>
 <body>
-  <hello-world id="hello" name="Joe"></hello-world>
+  <my-range value="10"></my-range>
+
+  <script>
+    document.querySelector('my-range').addEventListener('valueChanged', function(e){
+      console.log(e.detail.increased)
+    });
+  </script>
 
 </body>
 </html>
